fixed z-index on cookies banner

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -206,7 +206,8 @@ main{
     width: 100%;
     padding: 30px;
     text-align: center;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, .7);
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 1);
+    z-index: 100;
 }
 
 .cookie-banner a {
